--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   "Urls": "http://0.0.0.0:20102",
   "AppSettings": {
     "Database": {
-      "ChatAppDatabase": "Server=localhost;Database=tw_master;Uid=setup;Pwd=Qweqwe123$;Port=3306;Allow Zero Datetime=true;convert zero datetime=True;old guids=True;"
+      "QuanLyTrungTam": "Server=localhost;Database=quanlytrungtam;Uid=root;Pwd=long1997;Port=3306;Allow Zero Datetime=true;convert zero datetime=True;old guids=True;"
     },
     "DPS_CERT": "gVKyvL12dH516jpOKY",
     "ANSender": "https://mc-sender.anbeteam.io.vn",
